--- a/web-proyect/styles.css
+++ b/web-proyect/styles.css
@@ -266,3 +266,37 @@ h1 {
         font-family: 'Nunito Sans', sans-serif;
     }
 }
+
+@media(max-width: 436px) {
+    body {
+        padding-top: 30px;
+    }
+
+    .principal {
+        background-color: #ffffff00;
+        box-shadow: none;
+        padding: 10px;
+        margin: 0px 10px 20px 10px;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        grid-template-columns: 300px;
+        backdrop-filter: none;
+    
+    }
+    
+    .contenedor {
+        background-color: #3b99e13b;
+        box-shadow: 0px 0px 30px 2px rgb(253, 253, 253);
+        border-radius: 20px;
+        margin: 30px 0px 30px 0px;
+        padding: 10px 10px 30px 10px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(20px);
+    }
+}
